# changanbench

./: .condarc  .gitignore  Dockerfile  Progress.md  README.md  Reocrd.md  ddp_test.py  pyproject.toml  requirements.txt  requirements_illm.txt  setup.py  test.py  video_ddp_test.py  video_pair_test.py
cab/: __init__.py  complexity.py  utils.py
cab.egg-info/: PKG-INFO
cab/codec/: HM.py  MLICPlusPlus.py  VTM.py  __init__.py  abs.py  brhvc.py  bsq.py  cosmos.py  dcvc_b.py  dcvc_family.py  dcvc_sdd.py  dhvc.py  diffeic.py  elic.py  external_video.py  ffmpeg_video.py  flowmo.py  fsq.py  hific.py  ibq.py  identity.py  infinity.py  jpeg.py  (+9 more)
cab/models/dhvc/dhic/: README.md  pyproject.toml  test_dhic.py
cab/models/dhvc/dhic/src/dhic_codec/: __init__.py  __main__.py  eval.py
cab/models/dhvc/dhic/src/dhic_codec/models/: __init__.py  common.py  dhic.py  entropy_coding.py
cab/models/dhvc/dhic/tests/: test_eval_utils.py  test_model_smoke.py
changan_video/: __init__.py  distributed.py  h264_writer.py  test.py  utils.py  xiph_dataset.py
config/: changan_video_eval.yaml  config.yaml  image_datasets.yaml  image_metrics.yaml  stablecodec_q0.yaml  test.yaml  video_dcvc_family_eval.yaml  video_eval.yaml  video_metrics.yaml  video_pair_eval.yaml
docker/: build_video_artifacts.sh
examples/: db_usage_example.py  demo_generate_h264.py  demo_generate_h265.py  demo_generate_h266.py  encode_xiph_h265.py  encode_xiph_h266.py  encode_xiph_url.py
outputs/: demo.h265  refactor-smoke.h264  refactor-smoke.h265
scripts/: run_smoke.ps1  run_smoke.py  run_smoke.sh
tools/: README.md
(+413 files in other folders)
