[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "changan-video"
version = "0.1.0"
description = "PyAV helpers for writing H.264 from frame iterators and Xiph test media."
requires-python = ">=3.9"
dependencies = [
    "av>=12.0.0",
    "numpy>=1.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["changan_video*"]
