[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cab"
version = "0.1.0"
description = "Compression benchmark toolkit with image and video evaluation helpers."
requires-python = ">=3.9"
dependencies = [
    "av>=12.0.0",
    "numpy>=1.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cab*"]
